Fixed width of event-bar, so it is a little more readable.

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -136,7 +136,7 @@ span.name {
   margin: 4px 0px;
   background: rgb(192, 227, 255);
   line-height: 0px;
-  min-width: 20px;
+  min-width: 2.5%;
 }
 .wbc-event-bar p {
 	margin: 0px;
